data/derived/comb/progs/unify/prog8692.ml.out
Characters 45-59:
  let fixpoint (f,b) = wwhile ((let b = f b in (bb, bb = f b)),b);;
                                               ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
